# kilobot-gas

./: README.md
exp/: template.argos  test_localize_2.argos  test_localize_4.argos  test_localize_5.argos  test_localize_gauss.argos  test_localize_grid.argos  test_localize_grid_large.argos  test_localize_rand.argos
src/: CMakeLists.txt  topology.c
src/kb/: CMakeLists.txt  lcv.c  lcv.h  led.h  localize.c  localize.h  msg.c  msg.h  nbi.c  nbi.h  nbr.c  nbr.h  netcomp.c  netcomp.h  static.h  types.h
src/lib/: CMakeLists.txt  bitarray.c  bitarray.h  constants.h  debug.c  debug.h  err.c  err.h  fifo.c  fifo.h  kb_math.c  kb_math.h  list.c  list.h  matf.c  matf.h  sort.c  sort.h
src/state/: CMakeLists.txt  s_avoid.c  s_coalesce.c  s_done.c  s_elect.c  s_err.c  s_finalize.c  s_g_ohn.c  s_idle.c  s_lcv.c  s_search.c  s_template.c  s_twiddle.c  s_wait.c  state.c  state.h
